Set max-width instead of width for primary nav so it aligns correctly, a few beers in.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -41,11 +41,12 @@
 	.main-navigation {
 		float: right;
 		margin: 4em 0 1em 0;
-		width: 40%;
+		max-width: 40%;
 
 		@include bp(medium) {
 			margin: 1em 0;
 			text-align: center;
+			max-width: 100%;
 			width: 100%;
 		}
 
